--- a/hid-remote-bridge/config.yaml
+++ b/hid-remote-bridge/config.yaml
@@ -12,13 +12,13 @@ arch:
 startup: application
 boot: auto
 init: false
-watchdog: true
+watchdog: http://[HOST]:8099/api/health
 homeassistant_api: true
 ingress: true
 ingress_port: 8099
 panel_icon: mdi:remote
 devices:
-  - /dev/input:/dev/input:ro
+  - /dev/input
 udev: true
 apparmor: true
 options:
